--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p id="text-green"></p>
         </div>
         <div class="color">
-          <label for="blue">Blue (A)</label>
+          <label for="blue">Blue (B)</label>
           <input id="blue" type="range" min="0" max="255" value="56" step="1">
           <p id="text-blue"></p>
         </div>
